// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageGalleryScreen  1`] = `
<View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
    style={
      Object {
        "backgroundColor": "#eee",
      }
    }
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`ImageGalleryScreen empty images  1`] = `
<View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
    style={
      Object {
        "backgroundColor": "#eee",
      }
    }
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`ImageGalleryScreen with images  1`] = `
<View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
    style={
      Object {
        "backgroundColor": "#eee",
      }
    }
  >
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 325.5,
            "margin": 2,
            "padding": 2,
            "width": 371,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": undefined,
            }
          }
          style={
            Object {
              "alignSelf": "stretch",
              "flex": 1,
              "width": null,
            }
          }
        />
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 325.5,
            "margin": 2,
            "padding": 2,
            "width": 371,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": undefined,
            }
          }
          style={
            Object {
              "alignSelf": "stretch",
              "flex": 1,
              "width": null,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
